Changes: qr code guest delete addition
